--- a/index.css
+++ b/index.css
@@ -33,7 +33,11 @@
     font-style: normal;
 }
 
-* {
+body {
 	font-family: 'concourse_t2';
-	font-weight: bold;
+	font-size: 25px;
+	line-height: 1.2;
+	margin-left: 250px; 
+	margin-right: 250px;
+
 }
